// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slice test on ios Related articles renders null for a slice with no children 1`] = `null`;

exports[`Slice test on ios Related articles renders null for a slice with no children 2`] = `
<View
  style={
    Object {
      "display": "flex",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Test text
  </Text>
</View>
`;

exports[`Slice test on ios Related articles renders null for a slice with no children 3`] = `
<View
  style={
    Object {
      "display": "flex",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Test text 1
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Test text 2
  </Text>
</View>
`;
